feat: add basic integration tests